chore: bruk felles parent pom for deps og bygg (#257)
* chore: bruk felles parent pom for deps og bygg

* bedre parent